[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphfusion-ai"
version = "0.1.1"
description = "A unified framework for Neural Memory Networks and Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "networkx>=3.0.0",
    "pandas>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=22.0.0",
    "mypy>=0.910"
]

[project.urls]
Homepage = "https://github.com/graphfusionai/graphfusion"
Repository = "https://github.com/graphfusionai/graphfusion"